render address form fields

--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -9,12 +9,7 @@
     <ul>
         <%= f.fields_for :addresses do |addresses_form| %>
         <li>
-            <%= addresses_form.check_box :_destroy %>
-            <%= addresses_form.label :kind %>
-            <%= addresses_form.text_field :kind %>
-    
-            <%= addresses_form.label :street %>
-            <%= addresses_form.text_field :street %>
+            <%= render "address_fields", f: addresses_form %>
         </li>
         <% end %>
     </ul>
