add and document link_to_add_fields helper

--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -8,10 +8,11 @@
     Addresses:
     <ul>
         <%= f.fields_for :addresses do |addresses_form| %>
-        <li>
-            <%= render "address_fields", f: addresses_form %>
-        </li>
+            <li>
+                <%= render "address_fields", f: addresses_form %>
+            </li>
         <% end %>
+        <%= link_to_add_fields "Add Addresses", f, :addresses %>
     </ul>
 
     <%= f.submit %>
