--- a/app/views/people/_address_fields.html.erb
+++ b/app/views/people/_address_fields.html.erb
@@ -1,6 +1,11 @@
-<%= f.check_box :_destroy %>
-<%= f.label :kind %>
-<%= f.text_field :kind %>
-
-<%= f.label :street %>
-<%= f.text_field :street %>
+<div>
+    <%= f.check_box :_destroy %>
+    <div>
+        <%= f.label :kind %>
+        <%= f.text_field :kind %>
+    </div>
+    <div>
+        <%= f.label :street %>
+        <%= f.text_field :street %>
+    </div>
+</div>
