finish test suite

--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,5 +1,5 @@
 <tr>
     <td><%= person.first_name %></td>
     <td><%= person.last_name %></td>
-    <td><%= link_to "See More", person_path(person) %></td>
+    <td><%= link_to "View Peron", person_path(person) %> <%= link_to "Edit Person", edit_person_path(person) %></td>
 </tr>
