--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,13 +1,15 @@
 <h1><%= @person.first_name %> <%= @person.last_name %></h1>
-<h2>Addresses:</h2>
-<table>
-    <thead>
-        <tr>
-            <th>Kind</th>
-            <th>Street</th>
-        </tr>
-    </thead>
-    <tbody>
-        <%= render @person.addresses %>
-    </tbody>
-</table>    
+<% if @person.addresses.any? %>
+    <h2>Addresses:</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Kind</th>
+                <th>Street</th>
+            </tr>
+        </thead>
+        <tbody>
+            <%= render @person.addresses %>
+        </tbody>
+    </table>   
+<% end %> 
